--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
     "name": "lang2idl",
-    "version": "0.0.1",
+    "version": "0.0.3",
     "description": "programming language interface to idl.and idl to programing language.",
-    "main": "./dist/index.js",
     "scripts": {
-        "test": "test",
         "groovy2idl": "tsc & node ./dist/index.js groovy2idl ",
         "cs2idl": "tsc & node ./dist/index.js cs2idl ",
         "idl2ts": "tsc & node ./dist/index.js idl2ts"
@@ -27,11 +25,14 @@
     },
     "homepage": "https://github.com/acivang/lang2idl#readme",
     "dependencies": {
+        "optimist": "^0.6.1",
         "typescript": "^1.8.10"
     },
-    "preferGlobal": true,
+    "main": "./dist/index.js",
     "bin": {
-        "groovy2idl": "./dist/index.js groovy2idl ",
-        "cs2idl": "./dist/index.js cs2idl "
-    }
+        "groovy2idl": "groovy2idl.js",
+        "cs2idl": "cs2idl.js",
+        "idl2ts": "idl2ts.js"
+    },
+    "preferGlobal": true
 }
