--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "exclude": [
         "node_modules",
         "dist",
+        "test",
         "typings/index.d.ts",
         "typings/modules"
     ],
