--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.6",
     "description": "programming language interface to idl.and idl to programing language.",
     "scripts": {
+        "build": "tsc",
         "groovy2idl": "tsc & node ./dist/index.js groovy2idl ",
         "cs2idl": "tsc & node ./dist/index.js cs2idl ",
         "idl2ts": "tsc & node ./dist/index.js idl2ts"
