--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "programming language interface to idl.and idl to programing language.",
     "scripts": {
         "build": "tsc",
-        "groovy2idl": "tsc & node ./dist/index.js groovy2idl ",
-        "cs2idl": "tsc & node ./dist/index.js cs2idl ",
-        "idl2ts": "tsc & node ./dist/index.js idl2ts"
+        "groovy2idl": "tsc & node ./groovy2idl.js",
+        "cs2idl": "tsc & node ./cs2idl.js",
+        "idl2ts": "tsc & node ./idl2ts.js"
     },
     "repository": {
         "type": "git",
