--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lang2idl",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "programming language interface to idl.and idl to programing language.",
   "scripts": {
     "build": "npm i && tsc",
@@ -34,7 +34,9 @@
   "bin": {
     "groovy2idl": "groovy2idl.js",
     "cs2idl": "cs2idl.js",
-    "idl2ts": "idl2ts.js"
+    "idl2ts": "idl2ts.js",
+    "idl2groovy": "idl2groovy.js",
+    "idl2cs": "idl2cs.js"
   },
   "preferGlobal": true
 }
